--- a/components/src/App.css
+++ b/components/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+:root {
+  --primary-color: #7d8996;
+  --primary-color-dark: #192228;
+  --secondary-color: #66a43f;
+  --element-color: #28566d;
+  --text-color: #d8cb98;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  height: 100%;
+  background: -webkit-linear-gradient(180deg, rgb(25, 34, 40) 31%, rgb(41, 82, 105)) no-repeat;
+  background: -moz-linear-gradient(180deg, rgb(25, 34, 40) 31%, rgb(41, 82, 105)) no-repeat;
+  background: linear-gradient(180deg, rgb(25, 34, 40) 31%, rgb(41, 82, 105)) no-repeat;
 }
