feat: added search component

--- a/components/src/scss/_variables.scss
+++ b/components/src/scss/_variables.scss
@@ -5,3 +5,6 @@ $secondary-color: #66a43f;
 $element-color: #28566d;
 $text-color-main: #fff;
 $text-color-secondary: #d8cb98;
+
+//shadow
+$main-shadow: 0.5rem 0.5rem 0.5rem -0.5rem rgba(0, 6, 11, 0.6);
