feat: added pages

--- a/components/src/components/Footer/Footer.module.scss
+++ b/components/src/components/Footer/Footer.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
-  max-width: 120rem;
+  margin-top: auto;
   padding: 1rem 3rem;
 
   &__logo {
