--- a/components/src/components/ItemList/ItemList.module.scss
+++ b/components/src/components/ItemList/ItemList.module.scss
@@ -1,7 +1,7 @@
-@import '../../../scss/mixins';
-@import '../../../scss/variables';
+@import '../../scss/mixins';
+@import '../../scss/variables';
 
-.cardList {
+.itemList {
   margin-bottom: 3rem;
 
   &__wrapper {
@@ -9,14 +9,11 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 2rem;
+    padding: 0 1rem;
   }
 
   &__title {
     @include font(3.6rem, 700, $text-color-main);
     margin: 0 0 2rem 4rem;
-  }
-
-  &__wrapper {
-    padding: 0 1rem;
   }
 }
