--- a/components/src/components/ItemList/PersonCard/PersonCard.module.scss
+++ b/components/src/components/ItemList/PersonCard/PersonCard.module.scss
@@ -1,5 +1,5 @@
-@import '../../../../scss/variables';
-@import '../../../../scss/mixins';
+@import '../../../scss/variables';
+@import '../../../scss/mixins';
 
 .person {
   max-width: 25rem;
