--- a/components/src/scss/_settings.scss
+++ b/components/src/scss/_settings.scss
@@ -1,19 +1,22 @@
+@import './variables';
+
 * {
   box-sizing: border-box;
 }
 
 html {
+  min-height: 100%;
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
 }
 
 body {
-  height: 100%;
   margin: 0;
   padding: 0;
   background: -webkit-linear-gradient(180deg, rgb(25, 34, 40) 31%, rgb(41, 82, 105)) no-repeat;
   background: -moz-linear-gradient(180deg, rgb(25, 34, 40) 31%, rgb(41, 82, 105)) no-repeat;
   background: linear-gradient(180deg, rgb(25, 34, 40) 31%, rgb(41, 82, 105)) no-repeat;
+  background-color: $primary-color-dark;
 }
 
 ul {
@@ -28,4 +31,8 @@ button {
 h1,
 h2 {
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
