--- a/components/src/pages/UsersPage/UsersPage.module.scss
+++ b/components/src/pages/UsersPage/UsersPage.module.scss
@@ -2,6 +2,7 @@
 @import '../../scss/variables';
 
 .usersPage {
+  position: relative;
   margin-bottom: 3rem;
   padding: 0 1rem;
 
@@ -193,5 +194,17 @@
     opacity: 0;
     visibility: hidden;
     position: absolute;
+  }
+}
+
+.modal {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  &__title {
+    text-align: center;
+    @include font(3.6rem, 500, $text-color-main);
   }
 }
